Add postal resolver API
